--- a/frontend/src/app/modules/features/employer/employer-candidate-multiple-profile-matches/employer-candidate-multiple-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-multiple-profile-matches/employer-candidate-multiple-profile-matches.component.html
@@ -36,7 +36,7 @@
 				</div>
 				<app-shared-user-profile-job-matches [isMultipleMatches]="isMultipleMatches" [fieldsExclude]="{clients_worked: true, job_role: true, willing_to_relocate: true}" [userInfo]="userInfo" [postedJobsDetails]="matchingJob?.jobs"></app-shared-user-profile-job-matches>
 		  </div>
-		<div  class="top-pad" [ngClass]="(isMultipleMatches === true)?'col-lg-8':'col-lg-6'">
+		<div  class="top-pad top-pads" [ngClass]="(isMultipleMatches === true)?'col-lg-8':'col-lg-6'">
 			<div id="carouselProfile" class="carousel slide job-info-container" data-interval="false" data-ride="carousel">
 				<div class="carousel-inner">
 					<!--Profile1-->
