--- a/frontend/src/app/modules/features/user/profile/user-profile/user-profile.component.html
+++ b/frontend/src/app/modules/features/user/profile/user-profile/user-profile.component.html
@@ -1,7 +1,7 @@
 <section class="my-5">
   <div class="container">
     <div class="row  mb-5">
-      <div class="col-lg-8 col-md-12">
+      <div class="col-lg-8 col-md-8  matches-8">
         <div class="row">
           <div class="col-lg-12">
             <app-contact-card
@@ -74,7 +74,7 @@
         <app-shared-user-profile [userInfo]="userInfo" [isShowUserData]="isShowUserData" ></app-shared-user-profile>
 
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 col-md-4  matches-8">
         <app-user-profile-setting [isDashboard]="true"></app-user-profile-setting>
       </div>
     </div>
