--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
@@ -20,7 +20,7 @@
 <section class="my-5">
 	<div class="container container-big">
 		<div class="row">
-			<div  class="top-pad" [ngClass]="(isMultipleMatches === true)?'col-lg-4':'col-lg-6'">
+			<div  class="top-pad top-pads" [ngClass]="(isMultipleMatches === true)?'col-lg-4 col-md-4 matches-8':'col-lg-6 col-md-6 matches-8'">
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="card profile-card border p-2">
@@ -30,7 +30,7 @@
 										<h5 class="text-capitalize">{{postedJobsDetails?.title}}</h5>
 									</a>
 									<h6 class="text-capitalize mt-2">{{postedJobsDetails?.company?.company}}</h6>
-									<h6 class="mb-0 text-capitalize">
+									<h6 class="mb-0 text-capitalize job-txt">
 										{{postedJobsDetails?.city ? postedJobsDetails?.city+', '  : ''}}
 										{{postedJobsDetails?.state ? postedJobsDetails?.state+', '  : ''}}
 										<span class="text-uppercase">
@@ -43,7 +43,7 @@
 									<a (click)="onToggleJDModal(true)" class="btn btn-outline-blue btn-sm text-right mr-2" href="javascript:;">
 										<i class="fas fa-file-alt"></i> {{"shared.description" | translate }}
 									</a>
-									<a *ngIf="!isMultipleMatches" class="btn btn-outline-green btn-sm mr-1"
+									<a *ngIf="!isMultipleMatches" class="btn d-none-content btn-outline-green btn-sm mr-1"
 									  (click)="onViewOtherMatches()"
 										 href="javascript:;">
 										<!-- {{"dashboard.matches" | translate}} -->
@@ -68,19 +68,19 @@
 					[fieldsExclude]="{salary: false, visa_sponsorship: false, end_to_end_implementation: true}">
 				</app-shared-job-profile>
 			</div>
-			<div  class="top-pad" [ngClass]="(isMultipleMatches === true)?'col-lg-8':'col-lg-6'">
+			<div  class="top-pad top-pads" [ngClass]="(isMultipleMatches === true)?'col-lg-8 col-md-8 matches-8':'col-lg-6 col-md-6 matches-8 pad-0-job'">
 				<div id="carouselProfile" class="carousel slide" data-interval="false" data-ride="carousel">
 					<div class="carousel-inner">
 						<!--Profile1-->
 						<div class="carousel-item active">
 							<div class="row">
-								<div *ngIf="!utilsHelperService.isEmptyObj(matchingUsers?.profile)" [ngClass]="(isMultipleMatches === true)?'col-lg-6':'col-lg-12'" >
+								<div *ngIf="!utilsHelperService.isEmptyObj(matchingUsers?.profile)" [ngClass]="(isMultipleMatches === true)?'col-lg-6 col-md-6 matches-8':'col-lg-12 col-md-12 matches-8'" >
 									<div class="info-box">
 										<div class="col-lg-12" *ngIf="!isMultipleMatches">
 											<div class="card job-card">
 												<div class="card-body">
 													<div class="row">
-														<div class="col-lg-8">
+														<div class="col-lg-8 col-md-8">
 															<a [routerLink]="['/employer/candidate-profile']" [queryParams]="{id: matchingUsers?.profile?.id, jobId: postedJobsDetails?.id}" href="javascript:;">
 																	<h5 class="text-capitalize">
 																		<span>{{(matchingUsers?.profile?.first_name ? matchingUsers?.profile?.first_name : '') + ' '
@@ -90,7 +90,7 @@
 																	</h5>
 																</a>
 														</div>
-														<div class="col-lg-4">
+														<div class="col-lg-4 col-md-4 change-lays ">
 															<span class="mr-2"  style="display: inline-block;">														
 																<a [class.disabled]="!onGetFilteredValue(matchingUsers?.profile?.doc_cover)" href="javascript:;" (click)="onGetFilteredValue(matchingUsers?.profile?.doc_cover) && onToggleCoverForm(true, (matchingUsersMeta?.doc_resume?.path + '/' + matchingUsersMeta?.doc_resume?.folder + '/' + onGetFilteredValue(matchingUsers?.profile?.doc_cover)))" class="btn btn-outline-orange btn-sm" data-toggle="modal" data-target="#resumeModal">
 																		<small><i class="fas fa-file-alt"></i> {{"shared.coverLetter" | translate}}</small>
