--- a/frontend/src/app/modules/features/employer/post-job/screening-process/screening-process.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/screening-process/screening-process.component.html
@@ -9,7 +9,7 @@
 	</div>
 	<div class="col-lg-12" *ngIf="screeningProcess && screeningProcess.length && t.controls.length == 0 ">
 		<div class="row mt-3 mb-3">
-			<div class="col-lg-3 col-md-12 sidebar-widgets" *ngFor="let items of screeningProcess;let i=index">
+			<div class="col-lg-3 col-md-5 matches-8 sidebar-widgets" *ngFor="let items of screeningProcess;let i=index">
 				<div class="text-left">
 					<div class=" form-group">
 						<div class="custom-control custom-checkbox mb-2">
@@ -18,10 +18,10 @@
 						</div>
 					</div>
 					<div class="row mt-3 mb-3" *ngFor="let items of items;let i=index">
-						<div class="col-lg-2 col-md-4 text-left">
+						<div class="col-lg-2 col-md-1 matches-10 text-left">
 							<h6 class="font-weight-bold">{{i+1}}.</h6> 
 						</div>	
-						<div class="col-lg-10 col-md-8 text-left">
+						<div class="col-lg-10 col-md-10 matches-80 text-left">
 							<h6>{{items.title}}</h6>
 						</div>	
 					</div>
