--- a/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
+++ b/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
@@ -103,7 +103,7 @@
             <div class="box text-center upload-image uploads-image">
               <img *ngIf="(defaultProfilePic || employerDetails?.photo !='default.png')"
                 [src]="defaultProfilePic ? convertToImage(defaultProfilePic) : employerDetails?.meta?.photo?.path+'/'+ employerDetails?.meta?.photo?.folder+'/'+employerDetails?.meta?.photo?.sizes?.medium+'/'+employerDetails?.photo+'?v='+ randomNum"
-                alt="upload-photo" class="img-fluid mx-auto rounded-circle border border-primary"
+                alt="upload-photo" class="img-fluid mx-auto check-img rounded-circle border border-primary"
                 style="width:150px;height:150px;">
               <input  *ngIf="employerDetails?.photo =='default.png'" [style.top]="(defaultProfilePic || employerDetails?.photo) ? '0px' : '0px'" type="file" class="upload-input" #companyImage
                 (change)="handleFileInput($event, CropImage);" />
