--- a/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.css
+++ b/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.css
@@ -1,6 +1,9 @@
 .job-info-container .profile-card{
   min-height: 120px;
 }
+.top-pad{
+	margin-top: 0rem;
+}
 .cus-mt {
   margin-top: 2.5rem !important;
 }
