--- a/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
@@ -22,7 +22,7 @@
 <section class="my-5">
 	<div class="container container-big">
 		<div class="row">
-			<div [ngClass]="(isMultipleMatches === true)?'col-lg-4':'col-lg-6'">
+			<div [ngClass]="(isMultipleMatches === true)?'col-lg-4 col-md-4':'col-lg-6 col-md-6 matches-8'">
 				<div class="row">
 					<div class="col-lg-12">
 						<app-contact-card
@@ -39,7 +39,7 @@
 				</div>
 				<app-shared-user-profile-job-matches [isMultipleMatches]="isMultipleMatches" [fieldsExclude]="{clients_worked: true, job_role: true, willing_to_relocate: true}" [userInfo]="userInfo" [postedJobsDetails]="matchingJob?.jobs"></app-shared-user-profile-job-matches>
 		  </div>
-		<div class="top-pad" [ngClass]="(isMultipleMatches === true)?'col-lg-8':'col-lg-6'">
+		<div class="top-pad" [ngClass]="(isMultipleMatches === true)?'col-lg-8 col-md-8':'col-lg-6 col-md-6 matches-8'">
 			<div id="carouselProfile" class="carousel slide job-info-container" data-interval="false" data-ride="carousel">
 				<div class="carousel-inner">
 					<!--Profile1-->
@@ -51,7 +51,7 @@
 									<div class="col-lg-12" >
 										<div class="card profile-card">
 											<div class="d-flex">
-												<div class="col-lg-8 job-cards">
+												<div class="col-lg-8 col-md-12 job-cards">
 													<a [routerLink]="[ '/user/candidate-job-view/details' ]" [queryParams]="{id: matchingJob?.jobs?.id }"  class="text-capitalize" href="javascript:;">
 														<h5>{{matchingJob?.jobs?.title}} <small></small></h5>
 													</a>
@@ -70,7 +70,7 @@
 														</button> -->
 													</div>
 												</div>
-												<div class="col-lg-4"  [ngClass]="(isMultipleMatches === true)?'isMatchesView':''">
+												<div class="col-lg-4 col-md-12 change-lay"  [ngClass]="(isMultipleMatches === true)?'isMatchesView':''">
 													<a class="btn btn-outline-blue btn-sm text-right" href="javascript:;" (click)="onToggleJDModal(true,matchingJob?.jobs?.description)">	
 													<i class="fas fa-file-alt"></i> {{"shared.description" | translate}}</a>
 													
@@ -174,7 +174,7 @@
 				</a> -->
 				<div style="top:-35px;position: absolute;left: 10px;" >					
 						<span class="font-weight-bold" style="line-height: 28px;">  {{"shared.youHave" | translate}} {{matchingJobMeta?.count}} {{"shared.matches" | translate}}
-						<button type="button" (click)="!isMultipleMatches && onViewOtherMatches()" class="btn btn-outline-blue btn-sm ml-2 " style=" z-index:99;width: 70px;">{{"shared.viewAll" | translate}}</button>
+						<button type="button" (click)="!isMultipleMatches && onViewOtherMatches()" class="btn d-none-content btn-outline-blue btn-sm ml-2 " style=" z-index:99;width: 70px;">{{"shared.viewAll" | translate}}</button>
 						 </span>	
 				</div>
 				<div class="matchCount" style="top:-45px;">{{page}}/{{matchingJobMeta?.count}}</div>
