--- a/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
+++ b/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
@@ -1,7 +1,7 @@
 <section class="my-5">
 	<div class="container">
 		<div class="row mb-5">
-			<div class="col-lg-8 col-md-7">
+			<div class="col-lg-8 col-md-8 matches-8">
 				<div class="row">
 					<div class="col-lg-12 mt-3">
 						<div class="clearfix">
@@ -79,7 +79,7 @@
 					</mat-paginator>
 				</div>
 			</div>
-			<div class="col-lg-4 col-md-5">
+			<div class="col-lg-4 col-md-4 matches-8">
 				<div class="title">
 					<h2>{{"shared.filter" | translate}}
 						<button *ngIf="customObject?.keys(utilsHelperService.clean(tempQueryParams))?.length > 2" (click)="onClearFilter()" class="btn btn-sm btn-theme-blue ml-2 float-right" type="button">
