--- a/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
@@ -8,7 +8,7 @@
 				<div class="card job-card">
 					<div class="card-body">
 						<div class="row">
-							<div class="col-lg-7">
+							<div class="col-lg-7 col-md-7">
 								<h5>
 									<a href="javascript:;" class="text-capitalize">
 										{{childForm?.value?.personalDetails?.first_name + ' ' + childForm?.value?.personalDetails?.last_name}}
@@ -19,7 +19,7 @@
 									<small class="ml-2" type="button" data-toggle="modal" data-target="#contactModal"><i class="fas fa-address-card"></i> </small>
 								</h5>
 							</div>
-							<div class="col-lg-5 text-right">
+							<div class="col-lg-5 col-md-5 text-right">
 								<span data-toggle="modal" data-target="#exampleModal" (click)="OpenAddResume()">
 									<a class="btn btn-outline-blue btn-sm" >
 									<i class="fas fa-file-alt"></i> {{"shared.resume" | translate }}</a>
@@ -73,7 +73,7 @@
 					 <h6>{{"userProfile.personalDetails" | translate }}</h6>
 				</div>
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6">
+			<div class="col-lg-6 col-md-6 matches-8 col-sm-6">
 				<div class="row">
 					<div class="col-lg-6 col-md-6 col-sm-6 caption">
 						<ul class="list-group">
@@ -87,7 +87,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6">
+			<div class="col-lg-6 col-md-6 matches-8 col-sm-6">
 				<div class="row">
 					<div class="col-lg-6 col-md-6 col-sm-6 caption">
 						<ul class="list-group">
@@ -101,7 +101,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6">
+			<div class="col-lg-6 col-md-6 matches-8 col-sm-6">
 				<div class="row">
 					<div class="col-lg-6 col-md-6 col-sm-6 caption">
 						<ul class="list-group">
@@ -119,7 +119,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6">
+			<div class="col-lg-6 col-md-6 matches-8 col-sm-6">
 				<div class="row">
 					<div class="col-lg-6 col-md-6 col-sm-6 caption">
 						<ul class="list-group">
@@ -133,7 +133,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6">
+			<div class="col-lg-6 col-md-6 matches-8 col-sm-6">
 				<div class="row">
 					<div class="col-lg-6 col-md-6 col-sm-6 caption">
 						<ul class="list-group">
@@ -147,7 +147,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6" >
+			<div class="col-lg-6 col-md-6 matches-8 col-sm-6" >
 				<div class="row">
 					<div class="col-lg-6 col-md-6 col-sm-6 caption">
 						<ul class="list-group">
@@ -166,7 +166,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6">
+			<div class="col-lg-6 col-md-6 matches-8 col-sm-6">
 				<div class="row">
 					<div class="col-lg-6 col-md-6 col-sm-6 caption">
 						<ul class="list-group">
@@ -180,7 +180,7 @@
 					</div>
 				</div>
 			</div>	
-			<div class="col-lg-6 col-md-6 col-sm-6">
+			<div class="col-lg-6 col-md-6 matches-8 col-sm-6">
 				<div class="row">
 					<div class="col-lg-6 col-md-6 col-sm-6 caption">
 						<ul class="list-group">
@@ -194,7 +194,7 @@
 					</div>
 				</div>
 			</div>	
-			<div class="col-lg-6 col-md-6 col-sm-6">
+			<div class="col-lg-6 col-md-6 matches-8 col-sm-6">
 				<div class="row">
 					<div class="col-lg-6 col-md-6 col-sm-6 caption">
 						<ul class="list-group">
@@ -206,7 +206,7 @@
 					</div>
 				</div>
 			</div>	
-			<div class="col-lg-6 col-md-6 col-sm-6" *ngIf="childForm?.value?.jobPref?.willing_to_relocate">
+			<div class="col-lg-6 col-md-6 matches-8 col-sm-6" *ngIf="childForm?.value?.jobPref?.willing_to_relocate">
 				<div class="row">
 					<div class="col-lg-6 col-md-6 col-sm-6 caption">
 						<ul class="list-group">
@@ -232,12 +232,12 @@
 				</div>
 			</div>
 			<div class="col-lg-12 col-md-12 col-sm-12 row">
-				<div class="col-lg-4 col-md-4 col-sm-4 caption">
+				<div class="col-lg-4 col-md-4 matches-6 col-sm-4 caption">
 					<ul class="list-group">
 						<li class="list-group-item text-capitalize">{{"userProfile.totalYearsOfExp" | translate }}</li>
 					</ul>
 				</div>
-				<div class="col-lg-8 col-md-8 col-sm-8 info">
+				<div class="col-lg-8 col-md-8 matches-6  col-sm-8 info">
 					<ul class="list-group">
 						<li class="list-group-item" *ngIf="!childForm?.value?.educationExp?.experience || childForm?.value?.educationExp?.experience =='' || childForm?.value?.educationExp?.experience==0">
 						  {{childForm?.value?.educationExp?.experience}} Years
@@ -249,12 +249,12 @@
 				</div>
 			</div>
 			<div class="col-lg-12 col-md-12 col-sm-12 row" *ngIf="!childForm?.value?.personalDetails?.entry">
-				<div class="col-lg-4 col-md-4 col-sm-4 caption">
+				<div class="col-lg-4 col-md-4  matches-6  col-sm-4 caption">
 					<ul class="list-group">
 						<li class="list-group-item text-capitalize">{{"matches.totalYearsOfSapExperience" | translate }}</li>
 					</ul>
 				</div>
-				<div class="col-lg-8 col-md-8 col-sm-8 info">
+				<div class="col-lg-8 col-md-8  matches-6 col-sm-8 info">
 					<ul class="list-group">
 						<li class="list-group-item">
 						  {{childForm?.value?.educationExp?.sap_experience}} Years
@@ -263,12 +263,12 @@
 				</div>
 			</div>
 			<div class="col-lg-12 col-md-12 col-sm-12 row">
-				<div class="col-lg-4 col-md-4 col-sm-4 caption">
+				<div class="col-lg-4 col-md-4 matches-6 col-sm-4 caption">
 					<ul class="list-group">
 						<li class="list-group-item text-capitalize">{{"userProfile.domainsWorked" | translate }}</li>
 					</ul>
 				</div>
-				<div class="col-lg-8 col-md-8 col-sm-8 info">
+				<div class="col-lg-8 col-md-8 matches-6  col-sm-8 info">
 					<ul class="list-group">
 						<li class="list-group-item" *ngIf="childForm?.value?.educationExp?.domains_worked && childForm?.value?.educationExp?.domains_worked.length && childForm?.value?.educationExp?.domains_worked.length !=0">
 						  {{sharedService.onFindDomainFromID(childForm?.value?.educationExp?.domains_worked)}}
@@ -280,12 +280,12 @@
 				</div>
 			</div>
 			<div class="col-lg-12 col-md-12 col-sm-12 row" *ngIf="!childForm?.value?.personalDetails?.entry">
-				<div class="col-lg-4 col-md-4 col-sm-4 caption">
+				<div class="col-lg-4 col-md-4 matches-6  col-sm-4 caption">
 					<ul class="list-group">
 						<li class="list-group-item text-capitalize">{{"userProfile.handsOnExperience" | translate }}</li>
 					</ul>
 				</div>
-				<div class="col-lg-8 col-md-8 col-sm-8 info">
+				<div class="col-lg-8 col-md-8 matches-6  col-sm-8 info">
 					<ul class="list-group">
 						<li class="list-group-item text-uppercase d-flex handsExps ">
 							<ng-container *ngIf="childForm?.value?.skillSet?.hands_on_experience?.length; else elseHandsTemplate">
@@ -303,12 +303,12 @@
 				</div>
 			</div>
 			<div class="col-lg-12 col-md-12 col-sm-12 row">
-				<div class="col-lg-4 col-md-4 col-sm-4 caption">
+				<div class="col-lg-4 col-md-4 matches-6  col-sm-4 caption">
 					<ul class="list-group">
 						<li class="list-group-item text-capitalize">{{"userProfile.knowledgeOn" | translate }}</li>
 					</ul>
 				</div>
-				<div class="col-lg-8 col-md-8 col-sm-8 info">
+				<div class="col-lg-8 col-md-8 matches-6  col-sm-8 info">
 					<ul class="list-group">
 						<li class="list-group-item text-uppercase" *ngIf="childForm?.value?.skillSet?.skills"> 
 							<ng-container *ngIf="childForm?.value?.skillSet?.skills.length; else elseSkillsTemplate">
@@ -332,12 +332,12 @@
 				</div>
 			</div>
 			<div class="col-lg-12 col-md-12 col-sm-12 row">
-				<div class="col-lg-4 col-md-4 col-sm-4 caption">
+				<div class="col-lg-4 col-md-4  matches-6  col-sm-4 caption">
 					<ul class="list-group">
 						<li class="list-group-item text-capitalize">{{"userProfile.programmingSkills" | translate }}</li>
 					</ul>
 				</div>
-				<div class="col-lg-8 col-md-8 col-sm-8 info">
+				<div class="col-lg-8 col-md-8  matches-6 col-sm-8 info">
 					<ul class="list-group" >
 						<li class="list-group-item text-capitalize" *ngIf="childForm?.value?.skillSet?.programming_skills && childForm?.value?.skillSet?.programming_skills?.length && childForm?.value?.skillSet?.programming_skills?.length !=0">{{utilsHelperService.onConvertArrayToString(childForm?.value?.skillSet?.programming_skills)}} </li>
 					
@@ -348,12 +348,12 @@
 				</div>
 			</div>
 			<div class="col-lg-12 col-md-12 col-sm-12 row">
-				<div class="col-lg-4 col-md-4 col-sm-4 caption">
+				<div class="col-lg-4 col-md-4  matches-6  col-sm-4 caption">
 					<ul class="list-group">
 						<li class="list-group-item text-capitalize">{{"userProfile.others" | translate }}</li>
 					</ul>
 				</div>
-				<div class="col-lg-8 col-md-8 col-sm-8 info">
+				<div class="col-lg-8 col-md-8 matches-6  col-sm-8 info">
 					<!-- <ul class="list-group">
 						<li class="list-group-item text-capitalize">{{utilsHelperService.onConvertArrayToString(childForm?.value?.skillSet?.other_skills)}}</li>
 					</ul> -->
@@ -367,12 +367,12 @@
 				</div>
 			</div>
 			<div class="col-lg-12 col-md-12 col-sm-12 row">
-				<div class="col-lg-4 col-md-4 col-sm-4 caption">
+				<div class="col-lg-4 col-md-4 matches-6  col-sm-4 caption">
 					<ul class="list-group">
 						<li class="list-group-item text-capitalize">{{"userProfile.previousEmployers" | translate}}</li>
 					</ul>
 				</div>
-				<div class="col-lg-8 col-md-8 col-sm-8 info">
+				<div class="col-lg-8 col-md-8  matches-6 col-sm-8 info">
 					<ul class="list-group">
 						<!-- <li class="list-group-item text-capitalize">
 							{{utilsHelperService.onConvertArrayToString(childForm?.value?.personalDetails?.clients_worked)}}
@@ -388,12 +388,12 @@
 				</div>
 			</div>
 			<div class="col-lg-12 col-md-12 col-sm-12 row">
-				<div class="col-lg-4 col-md-4 col-sm-4 caption">
+				<div class="col-lg-4 col-md-4  matches-6  col-sm-4 caption">
 					<ul class="list-group">
 						<li class="list-group-item text-capitalize">{{"userProfile.rolesLookingFor" | translate }}</li>
 					</ul>
 				</div>
-				<div class="col-lg-8 col-md-8 col-sm-8 info">
+				<div class="col-lg-8 col-md-8 matches-6  col-sm-8 info">
 					<ul class="list-group">
 						<li class="list-group-item text-capitalize" *ngIf="childForm?.value?.jobPref?.job_role && childForm?.value?.jobPref?.job_role!=''">
 							{{childForm?.value?.jobPref?.job_role ? childForm?.value?.jobPref?.job_role : '--'}}
@@ -406,12 +406,12 @@
 				</div>
 			</div>
 			<div class="col-lg-12 col-md-12 col-sm-12 row">
-				<div class="col-lg-4 col-md-4 col-sm-4 caption">
+				<div class="col-lg-4 col-md-4  matches-6  col-sm-4 caption">
 					<ul class="list-group">
 						<li class="list-group-item text-capitalize">{{"userProfile.roleType" | translate }}</li>
 					</ul>
 				</div>
-				<div class="col-lg-8 col-md-8 col-sm-8 info">
+				<div class="col-lg-8 col-md-8  matches-6 col-sm-8 info">
 					<ul class="list-group">
 						<li class="list-group-item text-capitalize" *ngIf="childForm?.value?.educationExp?.employer_role_type">
 							{{childForm?.value?.educationExp?.employer_role_type ? childForm?.value?.educationExp?.employer_role_type : '--'}}
@@ -424,12 +424,12 @@
 				</div>
 			</div>
 			<div class="col-lg-12 col-md-12 col-sm-12 row">
-				<div class="col-lg-4 col-md-4 col-sm-4 caption">
+				<div class="col-lg-4 col-md-4  matches-6 col-sm-4 caption">
 					<ul class="list-group">
 						<li class="list-group-item text-capitalize">{{"userProfile.languageKnown" | translate}}</li>
 					</ul>
 				</div>
-				<div class="col-lg-8 col-md-8 col-sm-8 info">
+				<div class="col-lg-8 col-md-8  matches-6 col-sm-8 info">
 					<ul class="list-group">
 						<li class="list-group-item text-capitalize">
 							{{findLanguageArray(childForm?.value?.personalDetails?.language_known)}}
@@ -438,12 +438,12 @@
 				</div>
 			</div>
 			<div class="col-lg-12 col-md-12 col-sm-12 row">
-				<div class="col-lg-4 col-md-4 col-sm-4 caption">
+				<div class="col-lg-4 col-md-4  matches-6  col-sm-4 caption">
 					<ul class="list-group">
 						<li class="list-group-item text-capitalize">{{"userProfile.endToEnd" | translate}}</li>
 					</ul>
 				</div>
-				<div class="col-lg-8 col-md-8 col-sm-8 info">
+				<div class="col-lg-8 col-md-8  matches-6 col-sm-8 info">
 					<ul class="list-group">
 						<li class="list-group-item text-capitalize" *ngIf="childForm?.value?.educationExp?.end_to_end_implementation">
 							{{childForm?.value?.educationExp?.end_to_end_implementation ? childForm?.value?.educationExp?.end_to_end_implementation : '--'}}
@@ -494,7 +494,7 @@
 					<h6 class="text-blue" role="button" (click)="show = !show"> {{"userProfile.reference" | translate }}  <i class="fas fa-angle-down"></i></h6>
 				</div>
 				<div *ngIf="show" [@slideInOut] class="row mt-2" style="padding:0px;">
-					<div class="col-lg-4 col-md-4 col-sm-4 p-1" *ngFor="let reference of childForm.value.personalDetails.reference " >
+					<div class="col-lg-4 col-md-4 matches-33 col-sm-4 p-1" *ngFor="let reference of childForm.value.personalDetails.reference " >
 						<div class="card job-card sm" style="min-height: 105px;" *ngIf="reference.name && reference.email && reference.company_name">
 							<div class="card-body">
 								<p class="text-blue font-weight-bold mb-1">{{reference.name}}</p>
@@ -585,7 +585,7 @@
 				  <app-control-messages [control]="ticket['controls']['degree']"></app-control-messages>
 				</div>
 			  </div>
-			  <div class="col-lg-4 col-md-4 col-sm-4 col-md-5">
+			  <div class="col-lg-4 col-md-4 matches-33 col-sm-4 col-md-5">
 				<div class=" form-group">
 				  <label>{{"userProfile.fieldOfStudy" | translate }}</label>
 				  <input (change)="onChangeStudyValue($event?.target?.value, i)" formControlName="field_of_study" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.fieldOfStudy' | translate">
@@ -600,7 +600,7 @@
 				 
 				</div>
 			  </div>
-			  <div class="col-lg-2 col-md-2 col-sm-2 col-md-4 d-flex justify-content-center align-items-center">
+			  <div class="col-lg-2 col-md-2 col-sm-2 col-md-4 matches-33 d-flex justify-content-center align-items-center">
 				<button type="button" class="btn btn-outline-danger"
 				  style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemove(i)"><i class="fas fa-times"></i></button>
 				<button *ngIf="last" (click)="onDuplicate(i)" type="button" class="btn btn-outline-green ml-2"
@@ -692,7 +692,7 @@
 							<input formControlName="email" type="email"  class="form-control text-lowercase" placeholder="Please Enter the E-mail">
 							<app-control-messages [control]="ticket['controls']['email']"></app-control-messages>
 					  </div>
-					  <div class="col-lg-4 col-md-4 col-sm-4 col-md-6">
+					  <div class="col-lg-4 col-md-4 matches-33 col-sm-4 col-md-6">
 							<label>{{"shared.companyName" | translate }}</label>
 							<input  formControlName="company_name" type="text" class="form-control text-capitalize" placeholder="Please Enter the Company Name">
 							<app-control-messages [control]="ticket['controls']['company_name']"></app-control-messages>
