--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-education-exp/create-candidate-education-exp.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-education-exp/create-candidate-education-exp.component.html
@@ -2,7 +2,7 @@
   <h6 class="font-weight-bold mt-4">{{"userProfile.education" | translate }}</h6>
   <div class="row mt-3" *ngFor="let ticket of t.controls; let i = index; let last = last">
     <ng-container [formGroup]="ticket">
-      <div class="col-lg-2 col-md-5">
+      <div class="col-lg-2 col-md-2 matches-6">
         <div class=" form-group">
           <label>{{"userProfile.degree" | translate }} </label>
           <select (change)="onChangeDegreeValue($event?.target?.value, i)" formControlName="degree" class="form-control text-capitalize">
@@ -17,14 +17,14 @@
           <app-control-messages [control]="ticket['controls']['degree']"></app-control-messages>
         </div>
       </div>
-      <div class="col-lg-4 col-md-5">
+      <div class="col-lg-4 col-md-4 matches-6">
         <div class=" form-group">
           <label>{{"userProfile.fieldOfStudy" | translate }}</label>
           <input (change)="onChangeStudyValue($event?.target?.value, i)" formControlName="field_of_study" type="text" class="form-control text-capitalize" [placeholder]="'userProfile.fieldOfStudy' | translate">
           <app-control-messages [control]="ticket['controls']['field_of_study']"></app-control-messages>
         </div>
       </div>
-      <div class="col-lg-2 col-md-5">
+      <div class="col-lg-2 col-md-3 matches-6">
         <div class=" form-group">
           <label>{{"userProfile.yearOfCompletionGraduation" | translate }}</label>
           <input maxlength="4" (change)="onChangeCompletionValue($event?.target?.value, i)" numbersOnly formControlName="year_of_completion" type="text" class="form-control text-capitalize" [placeholder]="'userProfile.yearOfCompletionGraduation' | translate">
@@ -32,7 +32,7 @@
 		 
         </div>
       </div>
-      <div class="col-lg-2 col-md-6 d-flex justify-content-center align-items-center">
+      <div class="col-lg-2 col-md-2 matches-6 d-flex justify-content-center align-items-center">
         <button type="button" class="btn btn-outline-danger"
           style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemove(i)"><i class="fas fa-times"></i></button>
         <button *ngIf="last" (click)="onDuplicate(i)" type="button" class="btn btn-outline-green ml-2"
@@ -43,7 +43,7 @@
 
   <h6 class="font-weight-bold mt-4">{{"shared.experience" | translate }}</h6>
   <div class="row mt-3">
-    <div class="col-lg-3 col-md-6">
+    <div class="col-lg-3 col-md-4 matches-6">
       <div class=" form-group">
         <label>{{"userProfile.totalYearsOfExp" | translate }}</label>
 		<div appMarkAsterisk *ngIf="!this.childForm.value.personalDetails.entry" ></div>
@@ -52,7 +52,7 @@
 		 <small *ngIf="totalExpError"  class="text-danger">Total is greater than SAP Experience</small>
       </div>
     </div>
-    <div class="col-lg-3 col-md-6" *ngIf="childForm.value.personalDetails.entry==false" >
+    <div class="col-lg-3 col-md-4 matches-6" *ngIf="childForm.value.personalDetails.entry==false" >
       <div class=" form-group">
         <label>{{"matches.totalYearsOfSapExperience" | translate }}</label>
         <input (ngModelChange)="keyPress()" appMarkAsterisk numbersOnly formControlName="sap_experience" type="text" class="form-control w-50 text-center"  placeholder="+5">
@@ -60,7 +60,7 @@
 		 <small *ngIf="sapExpError" class="text-danger">SAP is not greater than Total Experience</small>
       </div>
     </div>
-    <div class="col-lg-4 col-md-6">
+    <div class="col-lg-4 col-md-4 matches-6">
       <div class=" form-group">
         <label>{{"userProfile.currentEmployer" | translate }}</label>
 		<div appMarkAsterisk *ngIf="!this.childForm.value.personalDetails.entry" ></div>
@@ -71,7 +71,7 @@
   </div>
 
   <div class="row mt-2">
-    <div class="col-lg-6 ">
+    <div class="col-lg-6 col-md-6 matches-8">
       <div class=" form-group">
         <label>{{"userProfile.currentRole" | translate }}</label>
 		<div appMarkAsterisk *ngIf="!this.childForm.value.personalDetails.entry" ></div>
@@ -79,7 +79,7 @@
         <app-control-messages [control]="f['current_employer_role']"></app-control-messages>
       </div>
     </div>
-    <div class="col-lg-4">
+    <div class="col-lg-4 col-md-6 matches-8">
       <div class=" form-group">
         <label>{{"userProfile.roleType" | translate }}</label>
           <select formControlName="employer_role_type" class="form-control text-capitalize">
