--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
@@ -1,6 +1,6 @@
 <div formGroupName="personalDetails">
 	<div class="row mt-5">
-		<div class="col-lg-4 col-md-12">
+		<div class="col-lg-4 col-md-4 matches-8">
 			<div class=" form-group">
 				<div class="custom-control custom-checkbox mb-2">
 				  <input type="checkbox" class="custom-control-input" formControlName="entry" (change)="onChangeData()" id="customCheckRemote01">
@@ -10,24 +10,24 @@
 		</div>
 	</div>
    <div class="row mt-2">
-      <div class="col-lg-4 col-md-12">
+      <div class="col-lg-4 col-md-4 matches-8">
         <div class=" form-group">
           <label>{{"shared.firstName" | translate }}</label>
           <input appMarkAsterisk formControlName="first_name" type="text" class="form-control text-capitalize" placeholder="First Name">
           <app-control-messages [control]="f['first_name']"></app-control-messages>
         </div>
       </div>
-      <div class="col-lg-4 col-md-12">
+      <div class="col-lg-4 col-md-4 matches-8">
         <div class=" form-group">
           <label>{{"shared.lastName" | translate }}</label>
           <input appMarkAsterisk formControlName="last_name" type="text" class="form-control text-capitalize" placeholder="Last Name">
           <app-control-messages [control]="f['last_name']"></app-control-messages>
         </div>
       </div>
-      <div class="col-lg-4  col-md-12 mt-4" style="z-index: 1;">
-        <div class="upload-box">
-          <div class="box text-center upload-image">
-            <img *ngIf="(defaultProfilePic || savedUserDetails?.photo)" [src]="defaultProfilePic ? convertToImage(defaultProfilePic) : savedUserDetails?.meta?.photo?.path+'/'+ savedUserDetails?.meta?.photo?.folder+'/'+savedUserDetails?.meta?.photo?.sizes?.medium+'/'+savedUserDetails?.photo+'?v='+ randomNum" alt="upload-photo" class="img-fluid mx-auto rounded-circle border border-primary"
+      <div class="col-lg-4  col-md-4 mt-4" style="z-index: 1;">
+        <div class="upload-box upload-boxs ">
+          <div class="box text-center upload-image upload-boxss">
+            <img *ngIf="(defaultProfilePic || savedUserDetails?.photo)" [src]="defaultProfilePic ? convertToImage(defaultProfilePic) : savedUserDetails?.meta?.photo?.path+'/'+ savedUserDetails?.meta?.photo?.folder+'/'+savedUserDetails?.meta?.photo?.sizes?.medium+'/'+savedUserDetails?.photo+'?v='+ randomNum" alt="upload-photo" class="img-fluid mx-auto check-img rounded-circle border border-primary"
                                     style="width:150px;height:150px;">
             <input *ngIf="(defaultProfilePic || savedUserDetails?.photo)" [style.top]="defaultProfilePic ? '-150px' : '-150px'" type="file"  class="upload-input" #userImage (change)="handleFileInput($event, CropImage);" />
 			<input *ngIf="(!defaultProfilePic && !savedUserDetails?.photo)" [style.top]="defaultProfilePic ? '0px' : '0px'" type="file"  class="upload-input" #userImage (change)="handleFileInput($event, CropImage);" />
@@ -41,14 +41,14 @@
       </div>
     </div>
     <div class="row mt-2">
-      <div class="col-lg-4 col-md-12">
+      <div class="col-lg-4 col-md-6 matches-8">
         <div class=" form-group">
           <label>{{"shared.emailAddress" | translate }}</label>
           <input appMarkAsterisk formControlName="email" type="email" class="form-control" placeholder="username@mail.com" value="jacky-smith2010@gmail.com">
           <app-control-messages [control]="f['email']"></app-control-messages>
         </div>
       </div>
-      <div class="col-lg-4 col-md-12">
+      <div class="col-lg-4 col-md-4 matches-8">
         <div class=" form-group">
           <label>{{"shared.mobileNumber" | translate }}</label>
           <ngx-intl-tel-input (ngModelChange)="checkNumber()"
@@ -66,7 +66,7 @@
       </div>
     </div>
     <div class="row mt-2">
-      <div class="col-lg-4 col-md-12">
+      <div class="col-lg-4 col-md-6 matches-8">
         <div class=" form-group">
           <label>{{"shared.city" | translate}}</label>
           <input autocomplete="disabled"  autocomplete="off" appMarkAsterisk ngx-google-places-autocomplete
@@ -75,7 +75,7 @@
           <app-control-messages [control]="f['city']"></app-control-messages>
         </div>
       </div>
-      <div class="col-lg-4 col-md-12">
+      <div class="col-lg-4 col-md-6 matches-8">
         <div class=" form-group">
           <label>{{"shared.state" | translate}}</label>
           <input autocomplete="disabled"  appMarkAsterisk formControlName="state" type="text" class="form-control text-capitalize" [placeholder]="'shared.state' | translate">
@@ -86,14 +86,14 @@
 
     </div>
     <div class="row mt-2">
-      <div class="col-lg-4 col-md-12">
+      <div class="col-lg-4 col-md-6 matches-8">
         <div class=" form-group">
           <label>{{"shared.zipCode" | translate}}</label>
           <input appMarkAsterisk  OnlyNumber="true" formControlName="zipcode" type="text" class="form-control" [placeholder]="'shared.zipCode' | translate">
           <app-control-messages [control]="f['zipcode']"></app-control-messages>
         </div>
       </div>
-      <div class="col-lg-4 col-md-12">
+      <div class="col-lg-4 col-md-6 matches-8">
         <div class=" form-group">
            <label>{{"shared.country" | translate }}</label>
           <input autocomplete="disabled" appMarkAsterisk formControlName="country" type="text" class="form-control text-uppercase" placeholder="Country" style="text-transform: capitalize !important">
@@ -102,7 +102,7 @@
       </div>
     </div>
 	<div class="row mt-2">
-		<div class="col-lg-4 col-md-12">
+		<div class="col-lg-4 col-md-6 matches-8">
 			<div class=" form-group">
 				<label>{{"userProfile.nationality" | translate }} </label> 
 				<select appMarkAsterisk formControlName="nationality" class="form-control" (change)="onChangeCountry($event.target.value)">
@@ -123,7 +123,7 @@
 				
 			</div>
 		</div>	 -->
-		<div class="col-lg-6 col-md-12" >	
+		<div class="col-lg-6 col-md-6 matches-8" >	
 			<div class=" form-group">
 				<label >{{"userProfile.previousEmployers" | translate }} <span *ngIf="!hideEmployee" class="required-asterisk">*</span></label>
 				<mat-form-field class="example-chip-list" >
@@ -251,7 +251,7 @@
 	  </div> 	
 		<div class="row mt-2" *ngFor="let ticket of t.controls; let i = index; let last = last">
 		<ng-container [formGroup]="ticket">
-			<div class="col-lg-4 col-md-6">
+			<div class="col-lg-4 col-md-4 matches-33">
 				<ngx-select
 				  class="text-capitalize"
 				  [placeholder]="'Select Language'"
@@ -276,7 +276,7 @@
 			   </ngx-select>
 			  <app-control-messages [control]="ticket['controls']['language']"></app-control-messages>
 		</div>
-		<div class="col-lg-3 col-md-4 top-3-remove mt-3">
+		<div class="col-lg-3 col-md-4 matches-33 top-3-remove mt-3">
 			<div class="custom-control custom-checkbox mr-sm-2 custom-control-inline">
 				<input type="checkbox" style="z-index: 999999;" formControlName="read" class="custom-control-input" id="read" name="read">
 				<label class="custom-control-label" for="Read">{{"shared.read" | translate }}</label>
@@ -292,7 +292,7 @@
 		</div>		
 
         
-        <div class="col-lg-2 col-md-4">
+        <div class="col-lg-2 col-md-3 matches-33">
           <button type="button" class="btn btn-outline-danger btn-lan" 
             style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemove(i)"><i class="fas fa-times"></i></button>
           <button *ngIf="last" (click)="onDuplicate(i)" type="button" class="btn btn-lan btn-outline-green "
@@ -414,23 +414,23 @@
 	  </div> 	
 		<div class="row mt-2" *ngFor="let ticket of r.controls; let i = index; let last = last">
 		<ng-container [formGroup]="ticket">
-			<div class="col-lg-3 col-md-3">
+			<div class="col-lg-3 col-md-3 matches-6">
 				<label>Name</label>
 				<input  formControlName="name" type="text" class="form-control text-capitalize" placeholder="Please Enter the Name">
 				<app-control-messages [control]="ticket['controls']['name']"></app-control-messages>
 		  </div>
-		  <div class="col-lg-3 col-md-3">
+		  <div class="col-lg-3 col-md-3 matches-6">
 				<label>Email</label>
 				<input formControlName="email" type="email"  class="form-control text-lowercase" placeholder="Please Enter the E-mail">
 				<app-control-messages [control]="ticket['controls']['email']"></app-control-messages>
 		  </div>
-		  <div class="col-lg-4 col-md-3">
+		  <div class="col-lg-4 col-md-3 matches-6">
 				<label>Company Name</label>
 				<input  formControlName="company_name" type="text" class="form-control text-capitalize" placeholder="Please Enter the Company Name">
 				<app-control-messages [control]="ticket['controls']['company_name']"></app-control-messages>
 		  </div>
        
-        <div class="col-lg-2 col-md-3" style="margin-top:30px;">
+        <div class="col-lg-2 col-md-3 matches-6" style="margin-top:30px;">
           <button type="button" class="btn btn-outline-danger" 
             style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemoveR(i)"><i class="fas fa-times"></i></button>
           <button *ngIf="last" (click)="onDuplicateR(i)" type="button" class="btn btn-outline-green "
