--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
@@ -9,7 +9,7 @@
   </div>
     <div class="row mt-2" *ngFor="let ticket of t.controls; let i = index; let last = last">
       <ng-container [formGroup]="ticket">
-        <div class="col-lg-5 col-md-12">
+        <div class="col-lg-5 col-md-5 matches-8">
           <ngx-select
           class="text-capitalize"
           (select)="onSelectSkillEvent($event, i)"
@@ -36,7 +36,7 @@
           <app-control-messages [control]="ticket['controls']['skill_id']"></app-control-messages>
         </div>
 
-        <div class="col-lg-2 col-md-6">
+        <div class="col-lg-2 col-md-3  matches-6">
           <div class="input-group mb-3">
             <input numbersOnly formControlName="experience" type="text" class="form-control" placeholder="Exp">
             <div class="input-group-append ">
@@ -49,7 +49,7 @@
           </div>
 
         </div>
-        <div class="col-lg-2 col-md-6">
+        <div class="col-lg-2 col-md-3  matches-6">
           <button type="button" class="btn btn-outline-danger"
             style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemove(i)"><i class="fas fa-times"></i></button>
           <button *ngIf="last" (click)="onDuplicate(i)" type="button" class="btn btn-outline-green ml-2"
