--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -338,6 +338,18 @@ a:hover {
 	right: 0px;
 	top: 0px;
 }
+.upload-box .box {
+  border: 1.25px dashed #cccccc !important;
+  padding: 0px;
+  position: absolute !important;
+  z-index: 99 !important;
+  min-height: 150px !important;
+  right: 20px !important;
+  background: #fefefe !important;
+  border-radius: 114px !important;
+  height: 150px !important;
+  width: 150px !important;
+}
 .box {
     border: 1.25px dashed #cccccc;
     width: 100%;
@@ -3051,7 +3063,7 @@ ul.timeline > li span:hover {
 	#myTab .nav-pills .nav-link {
 		border-radius: .25rem;
 		background-color: transparent;
-		font-size: 18px;
+		font-size: 6px;
 		font-weight: 700;
 		color: #abb5c0;
 		padding: 0;
@@ -3060,7 +3072,7 @@ ul.timeline > li span:hover {
 	}
 	#myTab .nav-pills .nav-link.active {
 		background-color: transparent;
-		font-size: 18px;
+		font-size: 6px;
 		font-weight: 700;
 		color: #465666;
 		padding: 0;
@@ -3085,12 +3097,102 @@ ul.timeline > li span:hover {
 
 /*-- Medium devices (tablets, 768px and up)--*/
 @media (min-width: 768px) and (max-width: 1023.98px) {
-	.top-pad{
-	margin-top: 55px;
+	.job-txt{
+		text-overflow: ellipsis;
+    display: grid;
+	}
+	.pad-0-job{
+		padding: 0px;
+	}
+	.matchs-info {
+		top: 40px !important;
+		font-size: 12px!important;
+		right: 0px!important;
+		left: 93px !important;
+	}
+	#matchBtnVal{
+		font-size: 9px !important;
+	}
+	#missBtnVal{
+		font-size: 9px !important;
+	}
+	#moreBtnVal{
+		font-size: 9px !important;
+	}
+	.col-md-77{
+	flex: 0 0 60%;
+    max-width: 60%;
+	padding-right: 5px;
+    padding-left: 5px;
 }
+.change-lay{
+	position: absolute;
+    left: 13rem;
+}
+.change-lays{
+	position: absolute;
+    left: 15rem;
+}
+
+.knldge{
+	font-size: 11px!important;
+}
+.ul-value{
+	font-size: 11px!important;
+}
+.col-md-55{
+	flex: 0 0 40%;
+    max-width: 40%;
+	padding-right: 5px;
+    padding-left: 5px;
+}
+	.top-pad {
+    margin-top: 0rem!important;
+}
+	.d-none-content{
+		display:none;
+	}
+	.nav-pills .nav-link {
+	 font-size: 16px;
+	 margin-right: 18px;
+	}
+	.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+		font-size: 16px;
+		margin-right: 18px;
+	}
+	ul.statusHistory .content {
+    margin: 0 0 25px 45% !important;
+	}
+	ul.statusHistory:before {
+    left: 37.25% !important;
+	}
+	ul.statusHistory .icon {
+		left: 31.5% !important;
+	}
+	ul.statusHistory .date {
+		width: 50% !important;
+	}
+	.nav-tab .nav-item {
+    padding-right: 17px;
+}
+	.btn-smss {
+    font-size: 6px;
+    height: 17px;
+}
+	.check-img{
+		width:100px !important;
+		height:100px !important;
+	}
+	.top-pad{
+	margin-top: 55px ;
+}.top-pads{
+	margin-top: 55px !important ;
+}.upload-boxs{
+		top: -4rem !important;
+	}
 	.upload-box{
 		
-    top: -20rem;
+    top: -17rem;
 	}.uploads-image{
 		
     top: -20rem;
@@ -3100,12 +3202,12 @@ ul.timeline > li span:hover {
     padding: 0px;
     position: absolute !important;
     z-index: 99 !important;
-    min-height: 129px !important;
+    min-height: 100px !important;
     right: 20px !important;
     background: #fefefe !important;
     border-radius: 114px !important;
     height: 100px !important;
-    width: 135px !important;
+    width: 100px !important;
 }
 	.container-big {
 		max-width: 100%!important;
@@ -3163,6 +3265,9 @@ ul.timeline > li span:hover {
 		margin-bottom: 5px;
 	}
 	
+	.modal-dialog.modal-xl {
+		max-width: 730px!important;
+	}
 	.modal-dialog.modal-lg {
 		max-width: 730px!important;
 	}
@@ -3176,7 +3281,7 @@ ul.timeline > li span:hover {
 		min-height: 26px;
 	}
 	.caption .list-group-item, .info .list-group-item{
-		font-size: 12px;
+		font-size: 11px;
 		margin-bottom: 5px;
 	}
 	.matching-post .custom-radio .custom-control-input~.custom-control-label {
@@ -3185,7 +3290,7 @@ ul.timeline > li span:hover {
 	}
 	.job-card .card-body {
 		padding: 10px;
-		min-height: 180px;
+		min-height: 118px;
 	}
 	.job-card .card-body110px {
 		padding: 10px;
@@ -3208,11 +3313,13 @@ ul.timeline > li span:hover {
 		left: 25px;
 		right: unset;
 	}
-	
+	#multiDate {
+		width: max-content !important;
+	}
 	#myTab .nav-pills .nav-link {
 		border-radius: .25rem;
 		background-color: transparent;
-		font-size: 18px;
+		font-size: 16px;
 		font-weight: 700;
 		color: #abb5c0;
 		padding: 0;
@@ -3221,7 +3328,7 @@ ul.timeline > li span:hover {
 	}
 	#myTab .nav-pills .nav-link.active {
 		background-color: transparent;
-		font-size: 18px;
+		font-size: 16px;
 		font-weight: 700;
 		color: #465666;
 		padding: 0;
@@ -3239,7 +3346,7 @@ ul.timeline > li span:hover {
 	}
 	
 	.landing-content {
-		background:transparent;
+		/* background:transparent; */
 		height: 650px;
 		padding-top: 60px;
 	}
@@ -3247,6 +3354,7 @@ ul.timeline > li span:hover {
 
 /*-- Large devices (desktops, large desktops, 1024px and up)--*/
 @media (min-width: 1024px) and (max-width: 1024.98px){ 
+	
 	.container-big {
 		max-width: 1440px!important;
 	}
@@ -3306,6 +3414,133 @@ ul.timeline > li span:hover {
 }
 
 @media (max-width: 450px){
+	.profile-card h5 {
+		width: auto !important;
+	}
+	.job-txt{
+		text-overflow: ellipsis;
+    display: grid;
+	}
+	.pad-0-job{
+		padding: 0px;
+	}
+	.matchs-info {
+		top: 40px !important;
+		font-size: 12px!important;
+		right: 0px!important;
+		left: 93px !important;
+	}
+	.change-lay{
+	position: absolute;
+    left: 13rem;
+}
+	.change-lays{
+		flex: 0 0 40% !important;
+    max-width: 40% !important;
+	position: absolute;
+    left: 15rem;
+}
+	.knldge{
+	font-size: 11px!important;
+}
+.ul-value{
+	font-size: 11px!important;
+}
+	.top-pad {
+    margin-top: 5rem !important;
+}
+	.d-none-content{
+		display:none;
+	}
+	.d-none-content{
+		display:none;
+	}
+	.nav-pills .nav-link {
+	 font-size: 16px;
+	 margin-right: 12px;
+	}
+	.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+		font-size: 16px;
+		margin-right: 12px;
+	}
+.offset-md-8 {
+    margin-left: 42.666667%;
+}
+.btn-smss {
+    font-size: 6px;
+    height: 17px;
+}
+.col-md-77{
+	flex: 0 0 60%;
+    max-width: 60%;
+	padding-right: 5px;
+    padding-left: 5px;
+}
+.col-md-55{
+	flex: 0 0 40%;
+    max-width: 40%;
+	padding-right: 5px;
+    padding-left: 5px;
+}
+.matches-8{
+	flex: 0 0 100% !important;
+    max-width: 100% !important;
+}
+.matches-4{
+	flex: 0 0 100% !important;
+    max-width: 100% !important;
+}
+.matches-6{
+	flex: 0 0 50% !important;
+    max-width: 50% !important;
+}
+.matches-80{
+	flex: 0 0 80% !important;
+    max-width: 80% !important;
+}
+.matches-20{
+	flex: 0 0 20% !important;
+    max-width: 20% !important;
+}.matches-25{
+	flex: 0 0 25% !important;
+    max-width: 25% !important;
+}.matches-33{
+	flex: 0 0 33% !important;
+    max-width: 33% !important;
+}
+.matches-10{
+	flex: 0 0 10% !important;
+    max-width: 10% !important;
+}
+.check-img{
+	
+		width:100px !important;
+		height:100px !important;
+	}
+	.upload-boxs{
+		top: 2rem !important;
+	}
+	.upload-box{
+		
+    top: 4rem;
+	}
+	.upload-boxss{
+		left: 20rem !important;
+	}
+	.upload-box .box {
+    border: 1.25px dashed #cccccc !important;
+    padding: 0px;
+    position: absolute !important;
+    z-index: 99 !important;
+    min-height: 100px !important;
+    right: 20px !important;
+    background: #fefefe !important;
+    border-radius: 114px !important;
+    height: 100px !important;
+    width: 100px !important;
+}
+	
+	
 .section-title-bg{
 		font-size: 45px !important;
 }
@@ -3395,7 +3630,7 @@ ul.timeline > li span:hover {
 	    font-size: 10px !important;
 }
 .matchs-info {
-    margin-top: 125px !important;
+    margin-top: 34px !important;
 }
 }
 .navbar-nav {
